# distributed-campaign-platform

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_CREDENTIALS.md  LICENSE  LOCAL_DEMO_ACCESS.md  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  content_or_docs.yml  deployment_task.yml
.github/workflows/: ci.yaml  codeql.yml  dependency-audit.yml  image-publish.yaml  secret-scan.yml  security.yml  static-deploy.yml  static-smoke.yml
apps/: README.md
apps/campaign-api/: Dockerfile
apps/dispatcher/: Dockerfile
apps/provider-simulator/: Dockerfile  README.md
apps/shared/: README.md
apps/web-ui/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
deploy/: README.md
deploy/cloudfront/: static-spa-router.js
deploy/helm/: README.md
deploy/kind/: cluster.yaml
docs/: cost.md  one-week-senior-platform-crash-course.md  privacy.md  security.md  setup.md  study-guide.md
docs/architecture/: architecture-diagram.mmd  architecture.md  aws-eks-architecture.mmd  implementation-status.md  overview.md
docs/incidents/: README.md
docs/kb/: customer-user-guide.md  internal-admin-guide.md
docs/plans/: 0000-phase-0-repo-foundation.md  0001-phase-1-local-app-skeleton.md  0002-phase-2-kubernetes-ready-local-platform.md  0003-phase-3-observability-reliability-hardening.md  0004-phase-4-demo-web-ui.md  0005-saas-observability-and-product-expansion.md  0006-ui-and-engagement-feature-roadmap.md  0007-sms-saas-product-depth-pass.md  0008-overnight-saas-depth-run.md  0009-docs-observability-product-polish.md  0010-page-audit-subscriber-scale-campaign-filters.md  0011-million-scale-broadcast-monitor-backlog.md  0012-full-app-design-auth-rbac-budget.md  0013-full-app-design-systems-and-functional-qa.md  0014-customer-kb-feature-marketing-and-product-depth.md  0015-researched-primary-design-direction.md  0016-tcpa-compliance-media-preview-visual-polish.md  0017-creative-landing-customer-login-analytics-campaign-cards.md
docs/product/: page-by-page-improvement-backlog.md  sms-saas-product-doc.md
docs/review/: llm-evaluation-prompt.md
docs/runbooks/: README.md  eks-dev.md  local-demo.md  observability.md
docs/screenshots/: README.md
infra/: README.md
infra/terraform/: README.md
platform/: README.md
platform/argocd/: campaign-platform-app.yaml
platform/external-secrets/: cluster-secret-store.yaml
platform/observability/: README.md  alloy-values.yaml  kube-prometheus-stack-values.yaml  loki-values.yaml  opentelemetry-collector-values.yaml  tempo-values.yaml
scripts/: README.md  check-prereqs.sh  check-public-readiness.mjs  deploy-static-edge-router.sh  smoke-static-host.mjs  validate-static-spa-router.mjs  verify-workflows.mjs
scripts/local/: drain-full-million-demo.py  e2e-smoke-test.sh  install-observability-dashboards.sh  (+3 more)
tests/: README.md
(+135 files in other folders)
