[project]
name = "distributed-campaign-platform"
version = "0.1.0"
description = "CampaignOS distributed campaign delivery simulator for AWS EKS platform engineering portfolio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.137.0",
  "uvicorn[standard]>=0.49.0",
  "pydantic>=2.8",
  "httpx>=0.27",
  "structlog>=24.0",
  "prometheus-client>=0.20",
  "opentelemetry-api>=1.26",
  "opentelemetry-sdk>=1.26",
  "opentelemetry-instrumentation-fastapi>=0.47b0",
  "opentelemetry-instrumentation-httpx>=0.47b0",
  "opentelemetry-exporter-otlp>=1.26",
  "asyncpg>=0.29",
  "boto3>=1.43.29",
  "redis>=7.4.1",
  "nats-py>=2.15.0",
]

[dependency-groups]
dev = [
  "pytest>=9.1.0",
  "pytest-asyncio>=1.4.0",
  "ruff>=0.15.17",
  "mypy>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/shared"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
